# automap-max

./: AutomapMax.c  CMakeLists.txt  README.md  automap_max_example.maxpat
